fixing margin on mobile for post listing

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,5 +1,7 @@
 .home {
-    margin: 1em;
+    .intro-card {
+        margin: 1em;
+    }
 
     .p-margin--top {
         margin-top: 1em;
